[gd_scene load_steps=5 format=3 uid="uid://bk5ld0h1jgd2t"]

[ext_resource type="LabelSettings" uid="uid://bdx3xgfcaqhse" path="res://assets/label/title_label.tres" id="1_bah65"]
[ext_resource type="Script" uid="uid://bseef8jor2pff" path="res://core/ui/components/card_button_setting.gd" id="1_vyqam"]
[ext_resource type="LabelSettings" uid="uid://bv56n31s84bfn" path="res://assets/label/subheading_label.tres" id="2_m742p"]
[ext_resource type="PackedScene" uid="uid://c71ayw7pcw6u6" path="res://core/ui/components/card_button.tscn" id="3_kep31"]

[node name="CardButtonSetting" type="BoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 47.0
grow_horizontal = 2
size_flags_horizontal = 3
focus_mode = 2
mouse_filter = 0
vertical = true
script = ExtResource("1_vyqam")
button_text = null
disabled = null

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ToggleContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ToggleContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Setting"
label_settings = ExtResource("1_bah65")

[node name="CardButton" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ToggleContainer" instance=ExtResource("3_kep31")]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
label_settings = ExtResource("2_m742p")
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
